--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
+    "graphql-http": "^1.18.0",
     "json-server": "^0.17.3",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/node": "^20.1.2",
     "nodemon": "^2.0.22"
   }
 }
